--- a/src/app/styles/menu.module.css
+++ b/src/app/styles/menu.module.css
@@ -64,12 +64,13 @@
   text-align: center;
   width: 100%;
   height: 500px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.452);
   transition: all 0.5s ease-out;
   z-index: 990;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  backdrop-filter: blur(2px);
 }
 
 .menu a {
