--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,30 +1,3 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-  /* --dark-background-color: #373744; */
-
-  /* font color */
-  /* --primary-color: aquamarine; */
-
-  /* --linear-gradient-main: linear-gradient(315deg, #2b4162 0%, #12100e 74%); */
-
-  /* --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2; */
-  color: var(--primary-color);
-
-  /* background-image: linear-gradient(153deg, #3a3a96, #0c122e); */
-  background-color: var(--dark-background-color);
-  background-image: var(--linear-gradient-main);
-  min-height: 100svh;
-  /* font-family: var(--font-geist-sans); */
-}
-/* 
-:root{
-  --startPosition: 200% 0;
-  --endPosition: -200% 0;
-} */
-
 
 
 /* @media (prefers-color-scheme: dark) {
@@ -40,42 +13,7 @@
 
 
 
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
 
-
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -103,7 +41,6 @@ a.secondary {
 }
 
 /* fancy title */
-
 .gradient_wrapper {
   display: inline-block;
   position: relative;
@@ -143,30 +80,7 @@ a.secondary {
   }
 }
 
-
-.page .myButton {
-  color: var(--primary-color);
-  margin: 1rem;
-  text-align: center;
-  border-radius: 15px;
-  width: 115px;
-  height: 30px;
-  background-color: var(--dark-background);
-  border: 1px solid #28393300;
-  /* color: #fff; */
-  /* background-color: #3A3A3C; */
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-  transition: all 0.2s ease;
-}
-
-/* .myButton:hover {
-  background-color: var(--primary-color);
-  color:var(--secondary-dark-background);
-  box-shadow: 0 0 10px var(--primary-color);
-} */
-
-
-
+/* ******************* this needs to get moved !!********************* */
 /* Skeleton loader for paragraph */
 .skeleton_loader {
   width: 100%;
