--- a/src/app/styles/menu.module.css
+++ b/src/app/styles/menu.module.css
@@ -64,25 +64,35 @@
   text-align: center;
   width: 100%;
   height: 500px;
-  background-color: rgba(0, 0, 0, 0.452);
+  /* background-color: rgba(0, 0, 0, 0.452); */
+  
   transition: all 0.5s ease-out;
   z-index: 990;
   display: flex;
   flex-direction: column;
   justify-content: center;
   backdrop-filter: blur(2px);
+  border-radius: 15px;
+  /* @TODO consolidate global vars!! */
+  background-color: #373744ad; 
 }
 
-.menu a {
+.menu a, .menu button{
   font-size: calc(2 * calc(1.375rem + 1.5vw));
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
   color: var(--text-contrast-for-blanchedAlmond);
+  background: none;
+  border: none;
+  text-shadow: 0px 4px 14px #27a69a;
 }
 
-.menu a:hover {
+ 
+.menu a:hover, .menu button:hover{
   border: 1px solid;
   border-radius: 10px;
   background-color: var(--dark-background-color);
+  
+  
 }
 
 .menu a:active {
