--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,11 @@
   src: url("../app/assets/Major_Mono_Display/Major_Mono_Display/MajorMonoDisplay-Regular.ttf");
 }
 
+@font-face { 
+  font-family: "KantumruyPro";
+  src: url("../app/assets/Kantumruy_Pro/KantumruyPro-VariableFont_wght.ttf");
+}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -35,7 +40,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif !important; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } 
@@ -99,6 +104,14 @@ th:nth-child(2) {
 }
 
 
-body, table, td {
+/* body , table, td{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}  
+  font-family: "KantumruyPro" !important;
+}   */
+
+.heading h2{
+  /* font-family: "KantumruyPro"; */
+  font-family: "Cyberpunk";
+}
+ 
+
