--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --foreground: #171717;
   --dark-background-color: #373744;
   --secondary-dark-background: #0b2a37;
+  --dark-grey-0: #31313d;
   --dark-grey-1: #373744;
   --dark-grey-2: #27252f;
   --dark-grey-3: rgb(39, 43, 44);
@@ -43,6 +44,7 @@ body {
   /* font-family: Arial, Helvetica, sans-serif !important; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  caret-color: var(--primary-color);
 } 
 
 
