--- a/src/app/styles/menu.module.css
+++ b/src/app/styles/menu.module.css
@@ -1,9 +1,4 @@
-.burgerMenu {
-  --base-color: #c6538c;
-  --border-dark: rgba(198, 83, 140, 0.88);
-  --text-contrast-for-blanchedAlmond: #4d4944;
-  --deep-jade: #199668;
-}
+
 
 .burgerMenu .bar {
   display: block;
@@ -66,7 +61,7 @@
   height: 500px;
   /* background-color: rgba(0, 0, 0, 0.452); */
   
-  transition: all 0.5s ease-out;
+  transition: all 0.4s ease-in-out;
   z-index: 990;
   display: flex;
   flex-direction: column;
@@ -94,11 +89,6 @@
   
   
 }
-
-.menu a:active {
-  background-color: var(--deep-jade);
-  border: 1px solid;
-  border-radius: 10px;
-}
+ 
 
 
