--- a/src/app/styles/textAreaUI.module.css
+++ b/src/app/styles/textAreaUI.module.css
@@ -44,7 +44,7 @@
 }
 
 
-.cyber_btn {
+/* .cyber_btn {
   color: var(--primary-color);
   margin: 1rem;
   text-align: center;
@@ -55,19 +55,15 @@
   border: 1px solid #28393300; 
   box-shadow:  0px 1px 3px 0px #221f1fba;
   transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, transfrom .3s ease-in-out;
-  /* transition: transform .3s ease-in-out */
 }
 
-.cyber_btn:hover {
-  /* background-color: var(--primary-color);
-  color:var(--secondary-dark-background); */
-  /* box-shadow: 0 0 10px var(--primary-color); */
+.cyber_btn:hover { 
   box-shadow: 0px 1px 3px 0px var(--primary-color);
 }
 
 .cyber_btn:active{
   transform: scale(.89);
-}
+} */
 
 .textarea_wrapper{
 
