--- a/src/app/styles/skeleteonLoader.module.css
+++ b/src/app/styles/skeleteonLoader.module.css
@@ -26,3 +26,33 @@
       background-position: var(--endPosition) 0%;
     }
   }
+
+
+  .grey_skeleton_loader {
+    /* width: 100%; */
+    height: 17px; /* Adjust height based on text */ 
+  
+    /* more subdued synthwave with a pastel feel */
+    background: linear-gradient(90deg, #282a2996 25%, #35373b99 50%, #3c3b3c7d 75%, #282a2996 100%);
+  
+    background-size: 200% 100%; /* Stretch gradient for animation */
+  
+    animation: loading 1.5s infinite ease-in-out; /* Infinite animation */
+    background-repeat: repeat-x;
+    margin: 1rem 1rem .5rem .5rem;
+  
+    border-radius: 25px;
+    min-width: 115px;
+    min-height: 30px;
+    background-color: var(--dark-grey-1);
+    border: 1px solid #28393300;
+    box-shadow: 0px 1px 3px 0px #221f1fba;  
+  
+  }
+
+  .grey_skeleton_container{
+ 
+    padding-right: 20px;
+    width:100%; 
+
+  }
