--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,12 @@
   }
 }
 
+@media (min-width: 750px) {
+  .container {
+    max-width: 700px !important;
+  }
+}
+
 html,
 body {
   max-width: 100vw;
