--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,9 +71,9 @@ body {
   color: var(--primary-color);
   margin: 1rem 1rem .5rem .5rem;
   text-align: center;
-  border-radius: 25px;
+  border-radius: 22px;
   min-width: 115px;
-  min-height: 30px;
+  min-height: 36px;
   background-color: var(--dark-grey-1);
   border: 1px solid #28393300; 
   box-shadow:  0px 1px 3px 0px #221f1fba;
@@ -81,6 +81,9 @@ body {
   /* transition: transform .3s ease-in-out */
   padding-left: 20px;
   padding-right: 20px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cyber_btn:hover {
